--- a/.vscode/.settings.json
+++ b/.vscode/.settings.json
@@ -1,6 +1,7 @@
 {
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "typescript.preferences.importModuleSpecifier": "non-relative",
   "javascript.preferences.importModuleSpecifier": "non-relative",
   "[javascript]": {
     "editor.formatOnSave": false,
